# dualManipulators

./: 2rrbots.launch  LICENSE  README.md  bui2_2rrbot.launch  bui_rrbot_control.launch  position_control_rrbot2.py  rrbot1.gazebo  rrbot1.xacro  rrbot2.gazebo  rrbot2.xacro  rrbot_control.launch  single_rrbot.launch
2rrbots/config/: rrbot3_pidcontrol.yaml  rrbot4_pidcontrol.yaml
2rrbots/launch/: erc_rrbots.launch  rrbot3.launch  rrbot4.launch
2rrbots/script/: position_control_rrbot3.py
2rrbots/urdf/: rrbot3.gazebo  rrbot3.xacro  rrbot4.gazebo  rrbot4.xacro
i5_robots/: aubo_driver.cpp  aubo_driver.h  dual_controller.cpp  ikFromPose.cpp  testAuboAPI.cpp
i5_robots/i5_control/: CMakeLists.txt  package.xml
i5_robots/i5_description/: CMakeLists.txt  README.md  package.xml
i5_robots/i5_gazebo/: CMakeLists.txt  package.xml
i5_robots/i5_gazebo/launch/: i5_robot.launch  i5_robot_xacro.launch
i5_robots/launch/: ik.launch
i5aubo1_grip_config/: .setup_assistant  CMakeLists.txt  package.xml
i5aubo1_grip_config/config/: fake_controllers.yaml  i5aubo1.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
i5aubo1_grip_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  i5aubo1_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
(+13 files in other folders)
